# fal

./: Cargo.toml  README.md
src/: fal_action.rs  fal_app.rs  fal_command.rs  fal_command2.rs  fal_config.rs  fal_list_element.rs  fal_message.rs  main.rs  program_lister.rs
src/components/: list_element_component.rs  mod.rs  result_component.rs  search_component.rs
src/platform_api/: linux_api.rs  mod.rs  windows_api.rs
windows-bindings/: Cargo.toml  build.rs
