[package]
name = "fal"
version = "0.1.0"
authors = ["Tristan Deschamps <tris790@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.0.19"
hotkey = "0.3.1"
regex = "1.5.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64" 

[target.'cfg(windows)'.dependencies]
windows-bindings = { path = "windows-bindings" }
windows = "0.11"
walkdir = "2.3.2"
